<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">hottour</string>
    <string name="main_menu_b_Search">Поиск</string>
    <string name="main_menu_b_Hanter">Хантер</string>
    <string name="main_menu_b_My_tour">Мой тур</string>
    <string name="main_menu_b_Help">Помощь</string>
    <string name="search_menu_b_0">Поиск тура</string>
    <string name="search_menu_b_1">Горящие</string>
    <string name="drawer_menu_Search">Мои туры</string>
    <string name="drawer_menu_Service">Сервис</string>
    <string name="geoApiKey">AIzaSyAPYR4EO-U2deKsKbXyNLR06ynnVaO0jCA</string>
    <string name="Search_depart_city_name_txt">Алматы</string>
    <string name="Search_0_txt">Город вылета</string>
    <string name="Search_qq_txt">от</string>
    <string name="Searchnight_grammar">ночь,ночи,ночей</string>
    <string name="Search_dt_txt">Дата вылета</string>
    <string name="Search_cc_txt">Страна, курорт</string>
    <string name="Searchadults_grammar">взрослый,взрослых,взрослых</string>
    <string name="Searchkids_grammar">ребенок,ребенка,детей</string>
    <string name="Search_select_txt">Найти туры</string>
    <string name="HOT_DEPART_CITY_0_txt">Выбрать</string>
    <string name="COUNTRY_CITY_visa_txt">Нужна виза</string>
    <string name="COUNTRY_CITY_0_txt">Куда летим</string>
    <string name="SELECT_TOURSkids_grammar">ребенок,детей,детей</string>
    <string name="SELECT_TOURS_za_txt">Цена за</string>
    <string name="SEARCH_D_D_0_txt">Дата вылета и длительность</string>
    <string name="sel_datecalendar">Январь,Февраль,Март,Апрель,Май,Июнь,Июль,Август,Сентябрь,Октябрь,Ноябрь,Декабрь</string>
    <string name="sel_len_0_txt">15 ночей</string>
    <string name="WHO_FLYINGtitle_grammar">год,года,лет</string>
    <string name="WHO_FLYING_rr_txt">Ребенок,</string>
    <string name="WHO_FLYING_0_txt">Добавить ребенка</string>
    <string name="DRAWER_enter_txt">Войти</string>
    <string name="MAP_butt_txt">Сделать заказ</string>
    <string name="Service_t_1_txt">Ремонтные площадки</string>
    <string name="Service_t_2_txt">Быстро - до 3х дней + подменный фонд</string>
    <string name="Service_t_3_txt">Качественно - гарантия 6 месяцев!</string>
    <string name="Service_t_4_txt">Удобно - площадки по всей Украине</string>
    <string name="Service_t_5_txt">Бесплатный забор техники!</string>
    <string name="Service_sel_txt">Выбрать площадку</string>
    <string-array name="search_d_d_tab_layout">
        <item> </item>
        <item> </item>
    </string-array>
</resources>