<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@drawable/shape_1001"
    >
    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:id="@+id/depart"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            >
            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/flag_country"
                android:layout_below="@id/qwe"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginTop="@dimen/dim_12"
                android:layout_width="@dimen/dim_24"
                android:layout_height="@dimen/dim_16"
                android:src="@drawable/flag_kaz"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/depart_city_name"
                android:layout_toRightOf="@id/flag_country"
                android:layout_below="@id/qwe"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="@dimen/dim_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Search_depart_city_name_txt"
                android:textSize="@dimen/dim_18"
                android:textColor="@color/title"
                />

            <TextView
                android:id="@+id/qwe"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Search_0_txt"
                android:textSize="@dimen/dim_12"
                android:textColor="@color/black_50"
                />

            <RelativeLayout
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_56"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                />

            <com.dpcsa.compon.custom_components.ComponImageView
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_16"
                android:layout_width="@dimen/dim_32"
                android:layout_height="@dimen/dim_32"
                android:src="@drawable/pin"
                android:scaleType="centerCrop"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/date"
            android:layout_below="@id/country"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            >
            <TextView
                android:id="@+id/depart_date"
                android:layout_below="@id/dt"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginTop="@dimen/dim_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_18"
                android:textColor="@color/title"
                />

            <com.dpcsa.compon.custom_components.TextViewNumberGrammar
                android:id="@+id/night"
                android:layout_below="@id/dt"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_18"
                android:textColor="@color/title"
                app:stringArray="@string/Searchnight_grammar"
                />

            <RelativeLayout
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_20"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                />

            <TextView
                android:id="@+id/dt"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Search_dt_txt"
                android:textSize="10dp"
                android:textColor="@color/grey"
                />

            <TextView
                android:layout_marginLeft="230dp"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Search_0_txt"
                android:textSize="10dp"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/country"
            android:layout_below="@id/depart"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            >
            <com.dpcsa.compon.custom_components.ComponTextValid
                android:id="@+id/country_city"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginBottom="@dimen/dim_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_18"
                app:typeValidate="filled"
                app:idError="@id/error"
                app:textError="Нужно выбрать куда летим"
                />

            <TextView
                android:id="@+id/cc"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Search_cc_txt"
                android:textSize="@dimen/dim_12"
                />

            <com.dpcsa.compon.custom_components.ComponImageView
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_16"
                android:layout_width="@dimen/dim_32"
                android:layout_height="@dimen/dim_32"
                android:src="@drawable/pin"
                android:scaleType="centerCrop"
                />

            <RelativeLayout
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_20"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                />

            <TextView
                android:id="@+id/error"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="@color/errorDark"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/who"
            android:layout_below="@id/date"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            >
            <com.dpcsa.compon.custom_components.TextViewNumberGrammar
                android:id="@+id/adults"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginTop="@dimen/dim_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_18"
                app:stringArray="@string/Searchadults_grammar"
                />

            <RelativeLayout
                android:id="@+id/d"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_20"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                />

            <TextView
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginTop="@dimen/dim_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Search_0_txt"
                android:textSize="@dimen/dim_12"
                />

            <com.dpcsa.compon.custom_components.TextViewNumberGrammar
                android:id="@+id/kids"
                android:layout_toRightOf="@id/adults"
                android:layout_marginLeft="@dimen/dim_4"
                android:layout_marginTop="@dimen/dim_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_18"
                app:stringArray="@string/Searchkids_grammar"
                app:zeroNotView="true"
                />

        </RelativeLayout>
        <com.dpcsa.compon.custom_components.Ellipsis
            android:layout_alignParentRight="true"
            android:layout_marginTop="47dp"
            android:layout_marginRight="29dp"
            android:layout_width="6dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            app:diametrDot="2dp"
            app:colorDot="@color/primary"
            app:amountDots="5"
            />

        <TextView
            android:id="@+id/select"
            android:layout_below="@id/who"
            android:layout_marginLeft="@dimen/dim_20"
            android:layout_marginTop="@dimen/dim_20"
            android:layout_marginRight="@dimen/dim_20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_56"
            android:background="@drawable/shape_1012"
            android:gravity="center"
            android:text="@string/Search_select_txt"
            android:textSize="@dimen/dim_20"
            android:textColor="@color/white"
            />

    </RelativeLayout>
</RelativeLayout>