<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_below="@id/pan1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />
    <RelativeLayout
        android:id="@+id/add_k"
        android:layout_below="@id/list"
        android:layout_width="match_parent"
        android:layout_height="72dp"
    >
        <com.dpcsa.compon.custom_components.ComponImageView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dim_20"
            android:layout_width="@dimen/dim_24"
            android:layout_height="@dimen/dim_24"
            android:src="@drawable/child"
            android:scaleType="centerCrop"
            />

        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WHO_FLYING_0_txt"
            android:textColor="@color/primary"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="560dp"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/white"
        />

    <com.dpcsa.compon.custom_components.TagsView
        android:id="@+id/tags"
        android:layout_below="@id/list"
        android:layout_marginLeft="@dimen/dim_20"
        android:layout_marginRight="@dimen/dim_20"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="200dp"
    />
    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/primary"
    >
        <com.dpcsa.compon.custom_components.ComponImageView
            android:id="@+id/back"
            android:layout_alignParentBottom="true"
            android:layout_width="@dimen/dim_56"
            android:layout_height="@dimen/dim_56"
            android:padding="@dimen/dim_14"
            android:src="@drawable/close"
            android:scaleType="centerCrop"
            />

        <com.dpcsa.compon.custom_components.ComponImageView
            android:id="@+id/ok"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="@dimen/dim_56"
            android:layout_height="@dimen/dim_56"
            android:padding="@dimen/dim_14"
            android:src="@drawable/ok"
            android:scaleType="centerCrop"
            />

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dim_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WHO_FLYING_0_txt"
            android:textSize="@dimen/dim_20"
            android:textColor="@color/white"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/sel"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dim_20"
        android:layout_marginRight="@dimen/dim_20"
        android:layout_marginBottom="@dimen/dim_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_56"
        android:background="@drawable/shape_1023"
    >
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HOT_DEPART_CITY_0_txt"
            android:textSize="@dimen/dim_20"
            android:textColor="@color/white"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/who_flying"
        android:layout_below="@id/tool"
        android:layout_marginLeft="@dimen/dim_20"
        android:layout_marginRight="@dimen/dim_20"
        android:layout_width="match_parent"
        android:layout_height="72dp"
    >
        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            />

        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        >
            <com.dpcsa.compon.custom_components.TextViewNumberGrammar
                android:id="@+id/adults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_18"
                app:stringArray="@string/Searchadults_grammar"
                />

            <com.dpcsa.compon.custom_components.TextViewNumberGrammar
                android:id="@+id/kids"
                android:layout_toRightOf="@id/adults"
                android:layout_marginLeft="@dimen/dim_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_18"
                app:stringArray="@string/Searchkids_grammar"
                app:zeroNotView="true"
                />

        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/pan1"
        android:layout_below="@id/who_flying"
        android:layout_marginLeft="@dimen/dim_20"
        android:layout_marginRight="@dimen/dim_20"
        android:layout_width="match_parent"
        android:layout_height="72dp"
    >
        <com.dpcsa.compon.custom_components.PlusMinus
            android:id="@+id/plus_minus"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/plus"
            android:layout_width="@dimen/dim_40"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/dim_18"
            app:noEdit="true"
            app:maxValue="3"
            app:minValue="1"
            app:viewMirror="@id/adults"
            />

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            />

        <RelativeLayout
            android:id="@+id/plus"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/dim_40"
            android:layout_height="@dimen/dim_40"
            android:background="@drawable/shape_1024"
        >
            <com.dpcsa.compon.custom_components.ComponImageView
                android:layout_centerInParent="true"
                android:layout_width="@dimen/dim_16"
                android:layout_height="@dimen/dim_16"
                android:src="@drawable/plus"
                android:scaleType="centerCrop"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/minus"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/plus_minus"
            android:layout_width="@dimen/dim_40"
            android:layout_height="@dimen/dim_40"
            android:background="@drawable/shape_1025"
        >
            <com.dpcsa.compon.custom_components.ComponImageView
                android:layout_centerInParent="true"
                android:layout_width="@dimen/dim_16"
                android:layout_height="@dimen/dim_16"
                android:src="@drawable/minus"
                android:scaleType="centerCrop"
                />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>